--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru" >
+<script async type="text/javascript" src="https://develop.callupper.com/static/js/client.js"></script>
 <head>
 <meta charset="UTF-8">
 <title>Название страницы - отображается на вкладке браузера и в поиске</title>
