--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ margin: 0;
 }
 }
 </style>
-<script async type="text/javascript" src="https://develop.callupper.com/static/js/client.js"></script>
+<script async type="text/javascript" src="https://wst.bsg.world/static/js/client.js"></script>
 </head>
 <body>
 <header class="header">
